ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: queen
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - queen.demo.dev.sspcloud.fr
  rules:
    - host: queen.demo.dev.sspcloud.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: queen
              servicePort: http
